src/layout/_center.scss
// standard centerin
.center > * {
  --center-gutter: 0;
  --center-width: 0;

  box-sizing: content-box;
  max-inline-size: var(--center-width);
  margin-inline: auto;
  padding-inline-start: var(--center-gutter);
  padding-inline-end: var(--center-gutter);
}

// make content centered as well
.center-inside {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

// Class that can be set on a child that needs to be full width and not centered
.center-exception {
  max-inline-size: none;
}

// Generate classes to set the padding of the .center
@each $name, $space in $bace-sizes {
  .center-g-#{$name} > * {
    --center-gutter: var(--size-#{$name});
  }
}

// Generate classes to set the width of the .center
@each $name, $size in $bace-breakpoints {
  .center-w-#{$name} > * {
    --center-width: var(--bp-#{$name});
  }
}

